shmuel 04.08.2019 03:04:52 +0200 - build 5443

1. Загружаем макросы до первого обновления панелей, чтобы сразу отображались контент-колонки, заданные в макрофайлах.

drkns 02.08.2019 20:14:49 +0100 - build 5442

1. С форума: F9 -> Options -> File panel modes -> Ins -> crash.

drkns 02.08.2019 01:32:31 +0100 - build 5441

1. Права доступа должны корректно протаскиваться через elevation.

zg 31.07.2019 14:28:50 +0300 - build 5440

1. с форума: Косметические дефекты позиционирования в отфильтрованном списке.

drkns 31.07.2019 01:27:30 +0100 - build 5439

1. Продолжение 5438 - уточнения обработки ошибок.

drkns 31.07.2019 00:47:04 +0100 - build 5438

1. В копировании неадекватно работала опция "Inherit access rights": копирование прав родительской папки - это ни разу не "наследование". Причём так было всегда.

2. Всё остальное там же, связанное с правами доступа, тоже не отличалось адекватностью.

drkns 29.07.2019 22:50:07 +0100 - build 5437

1. Продолжение 5435.

drkns 28.07.2019 19:35:59 +0100 - build 5436

1. С форума: Длинные строки <title> в !?<title>?<init>! выползают за границы диалога.

drkns 28.07.2019 14:41:29 +0100 - build 5435

1. Перенос симлинка с [x] Copy contents of symbolic links или по сети мог внезапно удалять файлы в папке, на которую он показывал.

drkns 28.07.2019 01:27:05 +0100 - build 5434

1. SCM revision в far:about.

2. Версии, собранные вручную, по умолчанию помечаются как Private.

3. Прочие уточнения вывода версии в интерфейсе.

4. Рефакторинг.

drkns 23.07.2019 19:23:43 +0100 - build 5433

1. VK_DECIMAL не всегда то же самое, что и '.'.

drkns 23.07.2019 07:20:01 +0100 - build 5432

1. Уточнение 5429.

drkns 22.07.2019 23:46:59 +0100 - build 5431

1. Уточнение 5429.

2. Мелкие улучшения детектора утечек памяти.

3. После создания минидампа показываем, куда именно сохранён (или не сохранён) файл.

4. Рефакторинг.

zg 23.07.2019 01:28:35 +0300 - build 5430

1. уточнение 5428.

drkns 22.07.2019 21:20:03 +0100 - build 5429
