@@ -294,6 +294,8 @@ $ #Keyboard reference#
 
  ~Menu control commands~@MenuCmd@
 
+ ~Screen grabber~@Grabber@
+
  ~Common controls~@MiscCmd@
 
  ~Special commands~@SpecCmd@
@@ -720,10 +722,8 @@ $ #Error: Cannot execute#
 external command, operable program or batch file.
 
 
-@MiscCmd
-$ #Common control commands#
- #Screen grabber#
-
+@Grabber
+$ #Screen grabber#
  Screen grabber                                             #Alt+Ins#
 
  Screen grabber allows to select and copy to the clipboard any screen area.
@@ -740,7 +740,10 @@ selected text to the clipboard, #Ctrl+<Gray +># appends it to the clipboard cont
  #Ctrl+U# - deselect block.
  #Ctrl+Shift+Left# and #Ctrl+Shift+Right# - extend or shrink selection by 10 characters left or right.
  #Ctrl+Shift+Up# and #Ctrl+Shift+Down# - extend or shrink selection by 5 lines up or down.
+ 
 
+@MiscCmd
+$ #Common control commands#
  #Keyboard macros#
 
  Record a ~keyboard macro~@KeyMacro@                                   #Ctrl+<.>#
@@ -1068,7 +1071,7 @@ file systems may not support file creation and access dates.
 ~panel menu~@LeftRightMenu@. After the mode change or drive change action,
 if the initial panel type differs it will be automatically set to the file panel.
 
- ~Speed search~@FastFind@ action can be used to point to the required file
+ ~Fast find~@FastFind@ action can be used to point to the required file
 by the first letters of its name.
 
  See also the list of ~macro keys~@KeyMacroShellList@, available in the panels.
@@ -1089,7 +1092,7 @@ updates it with the changes to the tree structure it is aware of. If such
 changes were made outside of Far and Tree.far is no longer current, it can be
 refreshed by pressing #Ctrl+R#.
 
- You can find a folder quickly with the help of #speed search# action. Hold
+ You can find a folder quickly with the help of #fast find# action. Hold
 the Alt key and type the folder name until you point to the right folder.
 Pressing #Ctrl+Enter# keys simultaneously will select the next match.
 
