@@ -310,6 +310,8 @@ $ #Клавиатурные команды#
 
  ~Команды управления меню~@MenuCmd@
 
+ ~Копирование текста с экрана~@Grabber@
+
  ~Общие команды~@MiscCmd@
 
  ~Специальные команды~@SpecCmd@
@@ -735,10 +737,8 @@ $ #Ошибка: Ошибка выполнения#
 командой, исполняемой программой или пакетным файлом.
 
 
-@MiscCmd
-$ #Общие команды#
- #Копирование текста с экрана#
-
+@Grabber
+$ #Копирование текста с экрана#
  Копирование текста с экрана                                #Alt+Ins#
 
  Эта команда позволяет выбрать и поместить в Буфер Обмена любую область экрана.
@@ -758,6 +758,9 @@ $ #Общие команды#
  #Ctrl+Shift+Left# и #Ctrl+Shift+Right# - перемещение с выделением на 10 позиций по горизонтали,
  #Ctrl+Shift+Up# и #Ctrl+Shift+Down# - перемещение с выделением на 5 позиций по вертикали.
 
+
+@MiscCmd
+$ #Общие команды#
  #Клавиатурные Макрокоманды#
 
  Записать ~клавиатурную макрокоманду~@KeyMacro@                        #Ctrl+<.>#
