@@ -1,3 +1,7 @@
+drkns 05.08.2019 23:24:36 +0100 - build 5444
+
+1. Справка по грабберу вынесена в отдельный топик.
+
 shmuel 04.08.2019 03:04:52 +0200 - build 5443
 
 1. Загружаем макросы до первого обновления панелей, чтобы сразу отображались контент-колонки, заданные в макрофайлах.
